style: fix horizontal scroller button color on dark mode

--- a/components/HorizontalScroller/HorizontalScroller.scss
+++ b/components/HorizontalScroller/HorizontalScroller.scss
@@ -61,4 +61,11 @@ $--icon-size: 7px;
       transform: rotate(45deg + 180deg);
     }
   }
+
+  &--dark & {
+    &__btn-prev::before,
+    &__btn-next::before {
+      border-color: white;
+    }
+  }
 }
